[project]
name = "server-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.1",
    "numpy>=2.2.6",
    "rust-enum>=1.1.5",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "coverage>=7.13.3",
    "hypothesis>=6.148.1",
    "pre-commit>=4.5.1",
    "pyrefly>=0.51.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.coverage.report]
omit = ["*/tests/*"]
show_missing = true

[tool.coverage.run]
branch = true
